Ignorar arquivos objetos de python

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
-/Rorschach/nbproject/private/
+Rorschach/nbproject/private/*
+rorschach_Website/homepage/__pycache__/*
+rorschach_Website/FichaUsuario/__pycache__/*
+rorschach_Website/rorschach_Website/__pycache__/*
